--- a/sass/site/content/_home.scss
+++ b/sass/site/content/_home.scss
@@ -17,7 +17,7 @@
 
   article {
     position: relative;
-    flex: 1 0 $size__thumbnail;
+    flex: $size__thumbnail;
     margin: 10px;
     display: flex;
     background-color: $color__background-post-preview-title;
